--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,18 @@
 $secondary: rgb(126, 16, 16);
+
+footer{
+    position: fixed;
+    bottom: 0;
+}
+p{
+    color: rgb(158, 158, 158);
+}
+img{
+    width: 20vw;
+    height: 18vw;
+    cursor: pointer;
+}
+#img-location {
+    width: 30vw;
+    height: 25vw;
+}
